FIX tiles on mobiles now always in 2 columns

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -71,11 +71,12 @@ body:not(.sapUiSizeCompact) .sapFDynamicPageTitleMainHeadingInner .sapMTitle > s
 .sapMGT.OneByOne .sapMText .sapMTextMaxLine.sapMTextLineClamp {-webkit-line-clamp: 3 !important}
 .exf-icon-tile .sapMGTContent {margin-top: -40px}
 .exf-tiles > .sapMPanelContent {border-bottom: none;}
+.exf-tiles > h2, .exf-panel > h2 {margin-top: 1rem;}
 .exf-tile > .sapMGTHdrContent.OneByOne > .sapMGTSubHdrTxt > .sapMText {white-space: normal;max-height: 2rem;  display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;text-overflow: -o-ellipsis-lastline;}
 /* Fix remove grayish background on busy-indicator in tile content */
 .sapMTileCntContent > .sapMNC  > .sapUiLocalBusyIndicator {background-color: transparent;}
-
-.exf-tiles > h2, .exf-panel > h2 {margin-top: 1rem;}
+/* Fix to force 2-column tile menus even on phones with long narrow screens (centering on wider phones) */
+html.sapUiMedia-Std-Phone .exf-tiles > .sapMPanelContent {padding-left: 0; padding-right: 0; margin-left: auto; margin-right: auto; width: 23.5rem; max-width: 100%}
 
 /* Panels */
 .exf-panel > .sapMPanelContent {border-bottom: none;}
